# logscope-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/logscope/: __init__.py  analyzer.py  cli.py
tests/: test_analyzer.py
